fixes panel in auctions/show to not spill over a pretty long email

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -224,6 +224,12 @@ a:hover, a:focus
 
 .remove-supplier
   color: red
+
+dt.auction-dl-dt
+  width: 125px
+
+dd.auction-dl-dd
+  margin-left: 140px
 // ******* BIDS CSS
 
 .largeicon
